# Game-2D

./: Abstact_Factory.cpp  Abstract_Factory.cpp  Abstract_Factory.h  Achievement.cpp  Achievement.h  Arcontus.cpp  Arcontus.h  BossLevel.cpp  BossLevel.h  BossMap1.cpp  BossMap1.h  CMakeLists.txt  ChoosCharacter.cpp  ChoosCharacter.h  ChooseCharacter.cpp  ChooseCharacter.h  Companion.cpp  Companion.h  Dungeon.cpp  Dungeon.h  Enemy.cpp  Enemy.h  EnemyAwake.cpp  EnemyAwake.h  EnemySleeping.cpp  EnemySleeping.h  EnemyStrategy.cpp  EnemyStrategy.h  FireBall.cpp  FireBall.h  Game.cpp  Game.h  GameCharacter.cpp  GameCharacter.h  GameObserver.cpp  GameObserver.h  Graphic.cpp  Graphic.h  GraphicState.cpp  GraphicState.h  (+61 more)
Risorse/: MAPPA
test/: CMakeLists.txt  CharacterProjectileTest.cpp  EnemyTest.cpp  KnightTest.cpp  ObstacleTest.cpp  ProjectileTest.cpp  runAllTest.cpp
test/lib/googletest/: Test1.cpp  Test1.h
